# thread-it

./: .gitignore  CLAUDE.md  CONTEXT-MAP.md  README.md  render.yaml  skills-lock.json
.github/workflows/: ci.yml
backend/: .env.example  CONTEXT.md  README.md  pyproject.toml
backend/app/: config.py  db.py  enums.py  main.py  order_state.py  payments.py  rate_limit.py  security.py
backend/app/crud/: admin.py  cart.py  catalog.py  checkout.py  pricing.py
backend/app/models/: __init__.py  catalog.py  order.py
backend/app/routers/: admin.py  cart.py  checkout.py  products.py
backend/app/schemas/: admin.py  cart.py  catalog.py  checkout.py  order.py
backend/migrations/: env.py
backend/migrations/versions/: 007b5d93015a_create_orders_tables.py  0ddede8f7933_create_catalog_tables.py  3a230d209789_add_idempotency_key_to_orders.py
backend/scripts/: seed.py
backend/tests/: conftest.py  factories.py  test_admin_auth.py  test_admin_authz.py  test_admin_orders.py  test_admin_products.py  test_cart.py  test_checkout.py  test_checkout_idempotency.py  test_config.py  test_health.py  test_input_validation.py  test_ipn_idempotency.py  test_order_state.py  test_pricing.py  test_product_model.py  test_products.py  test_rate_limit.py  test_stock_decrement.py
docs/: roadmap.md
docs/adr/: 0001-money-as-whole-taka-integer.md  0002-sqlalchemy-async-alembic.md  0003-tests-run-against-real-postgres.md  0004-client-side-cart-stateless-pricing.md  (+10 more)
docs/agents/: domain.md  (+2 more)
frontend/: .env.example  CONTEXT.md  next.config.ts  package-lock.json  package.json  vitest.config.mts
(+36 files in other folders)
